<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.github.paulosalonso</groupId>
	<artifactId>notification-scheduler</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Notification Scheduler</name>
	<description>Schedule notifications for future shipping</description>
	<properties>
		<java.version>11</java.version>

		<skip.unit.tests>false</skip.unit.tests>
		<skip.it.tests>false</skip.it.tests>
		<skip.mutation>true</skip.mutation>

		<line.coverage>0.90</line.coverage>
		<branch.coverage>0.90</branch.coverage>
		<mutation.threshold>90</mutation.threshold>

		<jacoco.version>0.8.5</jacoco.version>
		<pitest.version>1.5.2</pitest.version>
		<pitest-junit5-plugin.version>0.12</pitest-junit5-plugin.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<skipTests>${skip.unit.tests}</skipTests>
					<skipTests>${skipTests}</skipTests>
					<argLine> ${argLine} --illegal-access=permit </argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
				<configuration>
					<argLine>${argLine} --illegal-access=permit</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<classesDirectory>${project.build.outputDirectory}</classesDirectory>
							<skipTests>${skip.it.tests}</skipTests>
							<skipTests>${skipTests}</skipTests>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<configuration>
					<excludes>
						<exclude>**/ResearchApplication.*</exclude>
						<exclude>**/OpenApiConfiguration.*</exclude>
						<exclude>**/jwtconverter/**</exclude>
						<exclude>**/jwtdecoder/**</exclude>
						<exclude>**/SecurityInfo.*</exclude>
						<exclude>**/Claims.*</exclude>
						<exclude>**/TenantNotProvidedException.*</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<skip>${skip.unit.tests}</skip>
							<skip>${skip.it.tests}</skip>
							<skip>${skipTests}</skip>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>${line.coverage}</minimum>
										</limit>
										<limit>
											<counter>BRANCH</counter>
											<value>COVEREDRATIO</value>
											<minimum>${branch.coverage}</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.pitest</groupId>
				<artifactId>pitest-maven</artifactId>
				<version>${pitest.version}</version>
				<dependencies>
					<dependency>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-junit5-plugin</artifactId>
						<version>${pitest-junit5-plugin.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<phase>test</phase>
						<goals>
							<goal>mutationCoverage</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mutationThreshold>${mutation.threshold}</mutationThreshold>
					<skip>${skip.mutation}</skip>
					<mutators>
						<!-- DEFAULT LIST, WITHOUT NULL_RETURNS -->
						<mutator>CONDITIONALS_BOUNDARY</mutator>
						<mutator>INCREMENTS</mutator>
						<mutator>INVERT_NEGS</mutator>
						<mutator>MATH</mutator>
						<mutator>NEGATE_CONDITIONALS</mutator>
						<mutator>VOID_METHOD_CALLS</mutator>
						<mutator>EMPTY_RETURNS</mutator>
						<mutator>FALSE_RETURNS</mutator>
						<mutator>TRUE_RETURNS</mutator>
						<mutator>PRIMITIVE_RETURNS</mutator>
					</mutators>
					<targetClasses>
						<param>com.github.paulosalonso.notification.*</param>
					</targetClasses>
					<targetTests>
						<param>com.github.paulosalonso.notification.*</param>
					</targetTests>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
